--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+Version 2.3.6
+
+  - added missing CloseStream in CaratQClassCatalog
+  - catch CARAT failures better
+
 Version 2.3.5
 
   - removed C source no longer needed (use IO package instead)
